# DeepFISIK

./: .gitignore  DeepFISIKExample.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
Datasets/: README.md
configs/: example.yaml
models/: README.md
models/Images/classification/: ImageClassificationModel.pt
models/Images/dimers/: ImageDimerModel.pt
models/PureSimulations/classification/: PureSimulationsClassificationModel.pt
models/PureSimulations/dimers/: PureSimulationsDimerModel.pt
models/PureSimulations/tetramers/: PureSimulationsTetramerModel.pt
models/PureSimulations/trimers/: PureSimulationsTrimerModel.pt
scripts/: predict_classification.py  predict_dimers.py  predict_interactions.py  predict_oligo.py  predict_tetramers.py  predict_trimers.py  train_classification.py  train_dimers.py  train_tetramers.py  train_trimers.py
src/: __init__.py
src/deepfisik/: cli.py
src/deepfisik/data/: datasetInteractionsReadAll.py  dataset_interactions_images_parallel.py  dataset_interactions_parallel.py  dataset_interactions_tetramers_images_parallel.py  dataset_interactions_tetramers_parallel.py  dataset_interactions_trimers_images_parallel.py  dataset_interactions_trimers_parallel.py  graph_generator_interactions_dimers.py  graph_generator_interactions_tetramers.py  graph_generator_interactions_trimers.py  graph_generator_interactions_un.py  subgraphs_parallel.py
src/deepfisik/inference/: __init__.py  core.py
src/deepfisik/losses/: custom_loss_oligo.py  loss_dimers.py  loss_tetramer.py  loss_trimer.py
src/deepfisik/models/: decoders.py  (+5 more)
(+174 files in other folders)
